[gd_scene load_steps=4 format=2]

[ext_resource path="res://Interface/Theme_Main.tres" type="Theme" id=1]
[ext_resource path="res://Interface/Game/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://Interface/Assets/ButtonSounds.gd" type="Script" id=3]

[node name="PauseMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 300.0
margin_bottom = 220.0
theme = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 295.0
margin_bottom = 214.0

[node name="Label" type="Label" parent="PanelContainer/VBox"]
margin_right = 290.0
margin_bottom = 14.0
text = "Paused"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBox"]
margin_top = 18.0
margin_right = 290.0
margin_bottom = 209.0
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="PanelContainer/VBox/CenterContainer"]
margin_left = 105.0
margin_top = 67.0
margin_right = 185.0
margin_bottom = 123.0
rect_min_size = Vector2( 80, 0 )

[node name="Continue" type="Button" parent="PanelContainer/VBox/CenterContainer/VBox"]
margin_right = 80.0
margin_bottom = 16.0
theme = ExtResource( 1 )
text = "Continue"
script = ExtResource( 3 )

[node name="Options" type="Button" parent="PanelContainer/VBox/CenterContainer/VBox"]
margin_top = 20.0
margin_right = 80.0
margin_bottom = 36.0
text = "Options"
script = ExtResource( 3 )

[node name="MainMenu" type="Button" parent="PanelContainer/VBox/CenterContainer/VBox"]
margin_top = 40.0
margin_right = 80.0
margin_bottom = 56.0
text = "Main Menu"
script = ExtResource( 3 )

[connection signal="pressed" from="PanelContainer/VBox/CenterContainer/VBox/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="PanelContainer/VBox/CenterContainer/VBox/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="PanelContainer/VBox/CenterContainer/VBox/MainMenu" to="." method="_on_MainMenu_pressed"]
